# degeneric-macros

./: Cargo.toml  LICENSE  README.md  tea.yaml
.github/workflows/: publish.yml  release-plz.yml  rust.yml
src/: args.rs  attribute.rs  degeneric.rs  field.rs  generics.rs  lib.rs  named_requirement.rs  type_tools.rs
src/clone_ext/: entrypoint.rs  mod.rs
src/degeneric/: dynamize.rs  entrypoint.rs  field.rs  generics.rs  mod.rs
src/degeneric/type_tools/: associated.rs
src/type_tools/: mod.rs  references.rs
