[package]
name = "degeneric-macros"
authors = ["Tomas Jasek <tomsik68@posteo.net>"]
description = "Hides struct generics into trait associated types"
version = "0.2.1"
edition = "2018"
license = "MIT"
keywords = ["dependency-injection", "generics", "injection", "di"]
readme = "README.md"
homepage = "https://github.com/tomsik68/degeneric-macros"
repository = "https://github.com/tomsik68/degeneric-macros"
categories = ["rust-patterns"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trait-set = "0.2.0"
typed-builder = "0.9.1"
